--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,10 +1,12 @@
-.App {
+.body {
   text-align: center;
   margin: 0vh;
   padding: 1vh;
   background: #FFFAFA;
   height: 100vh;
   width: 100vw;
+  position: fixed;
+  overflow: hidden;
 }
 
 .welcomeAnimation {
@@ -226,6 +228,7 @@
   background-size: cover;
   background-position: center;
 }
+
 #aboutMeDiv {
   opacity: .7;
   font-size: 3.7vw;
@@ -285,6 +288,10 @@
   background: #e0ffc7 url(./components/images/treatslarge.gif) no-repeat center center;
   background-size: cover;
   background-position: center;
+}
+
+#aboutMeDiv {
+    text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
 }
 
 #navbar {
@@ -352,7 +359,6 @@ html{
     font-size: 1.5vw;
     overflow-x: hidden;
     overflow: hidden;
-
   }
 
   .vertical
